--- a/src/app/browser-event-experiments/browser-event-experiments.component.html
+++ b/src/app/browser-event-experiments/browser-event-experiments.component.html
@@ -6,6 +6,6 @@
   <div id="hover" class="hover-me"></div>
 
   <!--<button class="button button-highlight" (click)="unsubscribe()" >Unsubscribe</button>-->
-  <button class="button button-highlight" >Unsubscribe</button>
+  <button class="button button-highlight" (click)="unsubscribe()">Unsubscribe</button>
 
 </div>
