c03 without rxjs.js

--- a/src/app/lessons-list/lessons-list.component.html
+++ b/src/app/lessons-list/lessons-list.component.html
@@ -2,7 +2,7 @@
   <tbody>
   <tr *ngFor="let lesson of lessons">
     <td class="viewed">
-      <input type="checkbox" (click)="toggleLessonViewed(lesson)">
+      <input [checked]="lesson.completed" type="checkbox" (click)="toggleLessonViewed(lesson)">
     </td>
     <td class="lesson-title" [ngClass]="{'lesson-viewed':lesson.completed}"> {{lesson.description}}</td>
     <td class="duration">
@@ -10,7 +10,7 @@
       <span>{{lesson.duration}}</span>
     </td>
     <td class="duration">
-      <button class="button button-highlight" (click)="delete(lesson)">X</button>
+      <button class="button button-highlight" (click)="deleteLesson(lesson)">X</button>
     </td>
   </tr>
   </tbody>
